--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,10 +101,16 @@
         android:text="(선택)마케팅 약관에 동의합니다."
         android:visibility="gone" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
 
         <Button
             android:layout_width="0dp"
@@ -112,6 +118,10 @@
             android:layout_weight="1"
             android:text="sign up"
             android:textAllCaps="false"/>
+
+        <TextView
+            android:layout_width=""
+            android:layout_height=""
 
         <Button
             android:layout_width="0dp"
